--- a/kabuso/webfront/static/webfront/css/main.css
+++ b/kabuso/webfront/static/webfront/css/main.css
@@ -1,3 +1,7 @@
+body {
+    color: #333333;
+}
+
 .dashboard-stream {
     border: solid 1px;
     border-radius: 3px;
@@ -8,8 +12,26 @@
     max-height: 279px;  /* col-md-4 */
 }
 
+.page-detail .page-comment-count {
+    text-align: center;
+    padding-top: 20px;
+    color: #c0a16b;
+}
+
+.page-detail .page-comment-count span {
+    display: block;
+    font-size: x-large;
+}
+
 .page-detail .page-description {
     word-break: break-all;
+    color: #555555;
+    padding-top: 20px;
+}
+
+.page-detail .page-summary-image {
+    max-width: 180px;
+    max-height: 180px;
 }
 
 .vote-count {
