--- a/kabuso/webfront/templates/webfront/detail_page.html
+++ b/kabuso/webfront/templates/webfront/detail_page.html
@@ -3,13 +3,14 @@
 {% block main %}
   <div class="page-detail">
     <div class="row page-title">
-      <div class="col-md-2">
+      <div class="col-md-1">
         <div class="page-comment-count">
-          <span>10</span>
+          <span>{{ users_read }}</span>
           users read
         </div>
       </div>
-      <div class="col-md-10"><h3>{{ page.title }}</h3></div>
+      <div class="col-md-2"><img class="page-summary-image img-thumbnail" src="{{ page.summary_image_url }}" /></div>
+      <div class="col-md-8"><h3><a class="page-title-link" href="{{ page.page_url }}" target="_blank">{{ page.title }}</a></h3></div>
     </div>
     <div class="row">
       <div class="col-md-9">
@@ -17,7 +18,6 @@
       </div>
       {% if page.summary_image_url %}
         <div class="col-md-3">
-          <img class="page-summary-image img-thumbnail" src="{{ page.summary_image_url }}" />
         </div>
       {% endif %}
     </div>
