--- a/kabuso/webfront/templates/webfront/base.html
+++ b/kabuso/webfront/templates/webfront/base.html
@@ -42,10 +42,10 @@
   </nav>
 
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-xs-8">
       {% block main %}{% endblock %}
     </div>
-    <div class="col-md-4">
+    <div class="col-xs-4">
     </div>
   </div>
 
