--- a/kabuso/webfront/templates/webfront/detail_page.html
+++ b/kabuso/webfront/templates/webfront/detail_page.html
@@ -1,39 +1,66 @@
 {% extends 'webfront/base.html' %}
+{% load floppyforms %}
 
 {% block main %}
   <div class="page-detail">
     <div class="row page-title">
-      <div class="col-md-1">
+      <div class="col-xs-1">
         <div class="page-read-count">
           <span>{{ users_read }}</span>
           users read
         </div>
       </div>
       {% if page.summary_image_url %}
-        <div class="col-md-2"><img class="page-summary-image img-thumbnail" src="{{ page.summary_image_url }}" /></div>
+        <div class="col-xs-2"><img class="page-summary-image img-thumbnail" src="{{ page.summary_image_url }}" /></div>
       {% endif %}
-      <div class="col-md-8"><h3><a class="page-title-link" href="{{ page.page_url }}" target="_blank">{{ page.title }}</a></h3></div>
+      <div class="col-xs-8"><h3><a class="page-title-link" href="{{ page.page_url }}" target="_blank">{{ page.title }}</a></h3></div>
     </div>
     <p class="page-description">{{ page.description }}</p>
   </div>
 
-  {% if user_comment %}
-    {{ user_comment.body }}
+  <hr />
+
+  {% if not user.is_authenticated %}
+    Login and leave your comment.
   {% endif %}
 
-  {% if not user_read %}
+  {% if user.is_authenticated and not user_read %}
     <button class="btn btn-default">Read</button>
   {% endif %}
 
   {% if comment_form %}
-    <form method="post" action="{% url 'webfront:comment_page' page_id=page.id %}">
-      {% csrf_token %}
-      {{ comment_form }}
-      <input type="submit" value="Comment"/>
-    </form>
+    <div class="row comment-form">
+      <div class="col-xs-2">
+        <img class="user-icon-small img-rounded" src="http://dummyimage.com/300x300/000000/fff" />
+      </div>
+      <div class="col-xs-10">
+        <form method="post" action="{% url 'webfront:comment_page' page_id=page.id %}">
+          {% csrf_token %}
+          {{ comment_form.body }}
+          <div class="row">
+            <div class="col-xs-offset-6">
+              <p><input class="btn btn-default" type="submit" value="Comment"/></p>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
   {% endif %}
 
-  {% for comment in comments %}
-    {{ comment.body }}
-  {% endfor %}
+  <div class="comment-list">
+    {% if user_comment %}
+      {% include 'webfront/includes/list_comment.html' with comment=user_comment %}
+    {% endif %}
+  </div>
+
+  <ul class="nav nav-tabs">
+    <li{% if sorted_by == 'top' %} class="active"{% endif %} role="presentation"><a href="?sorted_by=top">Top</a></li>
+    <li{% if sorted_by == 'recent' %} class="active"{% endif %} role="presentation"><a href="?sorted_by=recent">Recent</a></li>
+  </ul>
+
+  <div class="comment-list">
+    {% for comment in comments %}
+      {% include 'webfront/includes/list_comment.html' with comment=comment %}
+    {% endfor %}
+  </div>
 {% endblock main %}
